fdo#78860: Swap the logic here: Disable -> Enable.

Because the UNO property logic had been swapped earlier.

Change-Id: I35af3e8cee3c4cbc8da43d7bc478f506048887b0